cursive-bootstrap/tests/ui/E-UNS/E-UNS-0104.cursive
// RUN: compile-fail
// DIAG: E-UNS-0104
// SPEC: 1.4
// DESC: transmute source and target alignments differ

record Aligned8 {
    x: i64
}

record Aligned4 {
    x: i32
}

public procedure main(move ctx: Context) -> i32 {
    let a: Aligned8 = Aligned8 { x: 42 }
    let b: Aligned4 = unsafe { transmute(a) }  //~ ERROR E-UNS-0104: alignment mismatch
    return b.x
}
